Suficiencia ivan villarreal para indicar que un item ha sido comprado es desde el menu contextual

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="precio">Precio</string>
     <string name="cancelar">Cancelar</string>
     <string name="registrar">Registrar</string>
+    <string name="eliminar">eliminar</string>
+    <string name="comprado">Comprado</string>
 
 </resources>
